# zen-vim

./: Cargo.toml  README.md  init.lua  keymaps.lua  plugins.lua
core/: rename.lua  resume.lua
src/: app.rs  config.rs  main.rs  picker.rs
src/core/: buffer.rs  cursor.rs  mod.rs  session.rs
src/modes/: mod.rs
src/ui/: dashboard.rs  mod.rs
ui/: dashboard.lua  pick.lua
