[package]
name = "zen-vim"
version = "0.1.0"
edition = "2021"
description = "Minimalist Vim-like terminal editor inspired by Neovim + Snacks"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "zen-vim"
path = "src/main.rs"

[dependencies]
# Terminal UI
ratatui = "0.24"
crossterm = { version = "0.27", features = ["event-stream"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# File handling
ignore = "0.4"  # For .gitignore support
walkdir = "2.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Text processing
regex = "1.0"
unicode-width = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0" 